tests/baselines/reference/unusedLocalsInMethod3.errors.txt
tests/cases/compiler/unusedLocalsInMethod3.ts(3,13): error TS6133: 'x' is declared but never used.


==== tests/cases/compiler/unusedLocalsInMethod3.ts (1 errors) ====
    class greeter {
        public function1() {
            var x, y;
                ~
!!! error TS6133: 'x' is declared but never used.
            y = 1;
        }
    }